--- a/package.json
+++ b/package.json
@@ -3,14 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.13.2",
+    "axios": "^0.18.0",
+    "babel-plugin-import": "^1.11.0",
+    "coveralls": "^3.0.2",
+    "customize-cra": "^0.2.11",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
+    "lodash": "^4.17.11",
+    "node-sass": "^4.11.0",
     "react": "^16.8.1",
+    "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.3"
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
+    "redux-devtools": "^3.5.0",
+    "redux-promise-middleware": "^6.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -21,5 +37,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!src/serviceWorker.js",
+      "!src/index.js"
+    ]
+  }
 }
