--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-devtools": "^3.5.0",
-    "redux-promise-middleware": "^6.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
