--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
+    "query-string": "^6.2.0",
     "react": "^16.8.1",
     "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.1",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
